--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "@types/classnames": "^2.2.10",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "@types/react-sticky": "^6.0.3",
+        "classnames": "^2.2.6",
         "date-fns": "^2.11.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-scripts": "3.4.0",
+        "react-sticky": "^6.0.3",
         "typescript": "~3.7.2"
     },
     "scripts": {
