--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "@types/react-modal": "^3.10.5",
         "@types/react-sticky": "^6.0.3",
         "classnames": "^2.2.6",
         "date-fns": "^2.11.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-modal": "^3.11.2",
         "react-scripts": "3.4.0",
         "react-sticky": "^6.0.3",
         "typescript": "~3.7.2"
