--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
         "@types/classnames": "^2.2.10",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
+        "@types/reach__router": "^1.3.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
         "@types/react-modal": "^3.10.5",
-        "@types/react-sticky": "^6.0.3",
         "classnames": "^2.2.6",
         "date-fns": "^2.11.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-modal": "^3.11.2",
         "react-scripts": "3.4.0",
-        "react-sticky": "^6.0.3",
         "typescript": "~3.7.2"
     },
     "scripts": {
@@ -44,8 +43,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "@types/reach__router": "^1.3.0"
     }
 }
